[package]
name = "fibonacci-nostd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fibonacci"
path = "src/bin/fibonacci.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bench]]
name = "verify_factorial"
harness = false

[dependencies]
anyhow = "1.0.92"
plonky2 = {git = "https://github.com/distributed-lab/plonky2", branch = "stable"}
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["console", "Window", "Performance"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
